# TidaLuna-Installer

./: .gitignore  Cargo.toml  LICENSE  README.md  bundle-public.js  make.js  package-lock.json  package.json  pnpm-lock.yaml  releases.json  sea-config.json  tsconfig.json  update.js
.github/workflows/: release-main.yml  update-releases.yml
public/: app-state.js  constants.js  easter-egg.js  events.js  help.js  index.html  installation.js  logger.js  main.js  message-handlers.js  particles.js  popup.js  releases.js  screens.js  script.js  state.js  steps.js  styles.css  theme.js  ui.js  websocket.js
resources/: sources.json
src/: InstallManager.ts  args.rs  cli.rs  helpers.ts  index.ts  installer.ts  main.rs  public-bundle.ts  ui.rs
src/Logging/: Sentry.ts
src/Steps/: CopyingAsarInstall.ts  CopyingAsarUninstall.ts  DownloadLuna.ts  ExtractLuna.ts  InsertingLuna.ts  KillTidal.ts  Setup.ts  SignTidal.ts  Uninstalling.ts
src/enums/: Steps.ts  WebsocketMessageTypes.ts
src/installer/: manager.rs  mod.rs  step.rs
src/installer/steps/: copy_asar_install.rs  copy_asar_uninstall.rs  download_luna.rs  extract_luna.rs  insert_luna.rs  kill_tidal.rs  launch_tidal.rs  mod.rs  reinstall_cleanup.rs  setup.rs  (+2 more)
src/types/: InstallInfo.ts  InstallLog.ts  Options.ts  Popup.ts  Release.ts  StepLog.ts  WebsocketMessage.ts  responses.ts  types.rs
src/ui/: models.rs  tasks.rs
src/utils/: BrowserHelper.ts  FileHelper.ts  MessageHelper.ts  PathHelper.ts  PopupHelper.ts  ReleaseLoader.ts  browser_helper.rs  fs_helpers.rs  fs_ops.rs  mod.rs  release_loader.rs  updater.rs
