[package]
name = "tidaluna-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.10", features = ["tokio"] } # or latest version
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
semver = "1.0"
regex = "1.10"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }